_Delete_/_oldkyverno/josh-app/templates/jb-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: josh-test-ingress
#   namespace: josh
# spec:
#   rules:
#     - host: "josh.test"
#       http:
#         paths:
#           - backend:
#               serviceName: josh-test-svc
#               servicePort: 8080
#             path: /
#             pathType: Prefix
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: josh-test-ingress
  namespace: josh  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
